# KNX-open-Developer-Tool

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
Core/Inc/: main.h
Core/Src/: main.c
Middlewares/KNX/include/: knx.h  knx_config.h  knx_dl.h  knx_dpt.h  knx_flash.h  knx_group.h  knx_hal.h  knx_prog.h  knx_transport.h
Middlewares/KNX/src/: knx.c  knx_dl.c  knx_dpt.c  knx_flash.c  knx_group.c  knx_transport.c
app/: CMakeLists.txt  main.cpp
app/resources/: knxodt-mime.xml  knxodt.desktop
app/resources/translations/: app_de.ts  app_en.ts
catalog/devices/: MDT_KP_BE_Push_Button_Smart_55_63_V12.knxprod  switch-actuator-1ch.yaml
cmake/: version.cmake
docs/: architecture.md  development-setup.md  device-manifest.md
knx-configurator/src/app/: MainWindow.h
samples/: ets 01-de.knxproj
schemas/: device-manifest.schema.yaml
src/: CMakeLists.txt
src/core/: BuildingPart.cpp  BuildingPart.h  CMakeLists.txt  ComObjectLink.cpp  ComObjectLink.h  DeviceCatalog.cpp  DeviceCatalog.h  DeviceInstance.cpp  DeviceInstance.h  DptRegistry.cpp  DptRegistry.h  GroupAddress.cpp  GroupAddress.h  KnxApplicationProgram.cpp  KnxApplicationProgram.h  KnxprodCatalog.cpp  KnxprodCatalog.h  KnxprojSerializer.cpp  KnxprojSerializer.h  Manifest.cpp  Manifest.h  Project.cpp  Project.h  ProjectXmlSerializer.cpp  ProjectXmlSerializer.h  TopologyNode.cpp  TopologyNode.h  YamlToKnxprod.cpp  YamlToKnxprod.h  ZipUtils.cpp  ZipUtils.h
src/knxip/: CMakeLists.txt  CemiFrame.cpp  CemiFrame.h  DeviceProgrammer.cpp  DeviceProgrammer.h  IKnxInterface.h  InterfaceManager.cpp  InterfaceManager.h  KnxIpDiscovery.cpp  KnxIpDiscovery.h  KnxIpTunnelingClient.cpp  KnxIpTunnelingClient.h  LineScanRunner.cpp  LineScanRunner.h  TableBuilder.cpp  TableBuilder.h  TransportConnection.cpp  TransportConnection.h
src/ui/: BusMonitorModel.cpp  BusMonitorModel.h  BusMonitorWidget.cpp  BusMonitorWidget.h  CMakeLists.txt  CatalogModel.cpp  CatalogModel.h  CatalogWidget.cpp  CatalogWidget.h  DeviceEditorWidget.cpp  DeviceEditorWidget.h  GroupMonitorWidget.cpp  GroupMonitorWidget.h  MainWindow.cpp  MainWindow.h  ProgramDialog.cpp  ProgramDialog.h  ProjectTreeModel.cpp  ProjectTreeModel.h  ProjectTreeWidget.cpp  ProjectTreeWidget.h  PropertiesPanel.cpp  PropertiesPanel.h  UndoCommands.cpp  UndoCommands.h
src/ui/dialogs/: BatchProgramDialog.cpp  BatchProgramDialog.h  ConnectDialog.cpp  ConnectDialog.h  GaCsvImportDialog.cpp  GaCsvImportDialog.h  GroupAddressDialog.cpp  GroupAddressDialog.h  LineScanDialog.cpp  LineScanDialog.h  NewProjectDialog.cpp  NewProjectDialog.h  SettingsDialog.cpp  SettingsDialog.h
src/usb/: CMakeLists.txt  ConnectInterfaceFactory.cpp  ConnectInterfaceFactory.h  UsbKnxInterface.cpp  UsbKnxInterface.h
tests/: CMakeLists.txt  test_cemi_frame.cpp  test_device_instance.cpp  test_groupaddress.cpp  test_knxprod_parser.cpp  test_manifest_parser.cpp  test_parameter_visibility.cpp  test_programmer.cpp  test_project_model.cpp  test_table_builder.cpp  test_topology_node.cpp  test_transport_connection.cpp  test_xml_serializer.cpp
